Lots of front-end work

--- a/BowlingCoreMVC/Views/Shared/_CardListMultipleValue.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_CardListMultipleValue.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BowlingCoreMVC.Models.ListMultipleValue
 
 
-<div class="card text-white bg-secondary w-50 card-inline">
+<div class="card text-white bg-secondary w-100 card-inline" id="cardmultiplevalue">
     <div class="card-body">
         <h5 class="card-title">@Model.Title</h5>
         <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
