--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 @inject UserManager<ApplicationUser> UserManager
 @*TODO: Revamped home page for logged in user*@
 
-<div class="body-content">
-    <div class="container">
+<div class="body-content col-lg-12 container">
+    <div class="">
         @if (!SignInManager.IsSignedIn(User))
         {
 
@@ -25,14 +25,14 @@
         @* User is signed in *@
         else
         {
-            <div class="col-lg-12">
+            <div class="">
                 <h2 class="text-center">Welcome Back to BowlingHub!</h2>
                 <hr />
 
                 @if (ViewData["TodaysLeague"] != null)
                 {
                     League l = (League)ViewData["TodaysLeague"];
-                    <div class="card w-50 text-center">
+                    <div class="card w-100 text-center">
                         <div class="card-header">Your league "@l.Name" is today!</div>
                         <div class="card-body">
                             <a asp-action="QuickCreateSeries" asp-controller="Home" asp-route-LeagueID="@l.ID" class="btn btn-primary btn-block">Start bowling a New Series for @l.Name</a>
