--- a/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
@@ -4,28 +4,45 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-<form asp-area="Identity" asp-page="/Account/Logout"
-      asp-route-returnUrl="@Url.Page("/Index", new { area = "" })"
-      method="post"
-      id="logoutForm" class="navbar-right">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="btn btn-link navbar-btn nav-link">
-                Hello @UserManager.GetUserName(User)!
-            </a>
-        </li>
-        <li class="nav-item">
-            <button type="submit" class="btn btn-link navbar-btn nav-link">Logout</button>
-        </li>
-    </ul>
-</form>
-}
-else
-{
-    <ul class="navbar-nav">
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Log in</a></li>
-    </ul>
-}
+
+@*<button class="navbar-toggler navbar-right d-lg-none ml-auto" type="button" 
+        data-toggle="collapse" data-target="#navbarNavDropdown" 
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+</button>*@
+
+<button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" 
+        data-toggle="collapse" data-target="#navbarNavDropdown" 
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fas fa-align-justify"></i>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <form asp-area="Identity" asp-page="/Account/Logout"
+              asp-route-returnUrl="@Url.Page("/Index", new { area = "" })"
+              method="post"
+              id="logoutForm" class="navbar-right">
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item">
+                    <button asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="btn btn-link navbar-btn nav-link">
+                        Hello @UserManager.GetUserName(User)!
+                    </button>
+                </li>
+                <li class="nav-item">
+                    <button type="submit" class="btn btn-link navbar-btn nav-link">Logout</button>
+                </li>
+            </ul>
+        </form>
+    }
+    else
+    {
+        <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
+            <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Log in</a></li>
+        </ul>
+    }
+
+</div>
