--- a/BowlingCoreMVC/Pages/Components/GameComponent.razor
+++ b/BowlingCoreMVC/Pages/Components/GameComponent.razor
@@ -170,6 +170,11 @@
 
 @code {
 
+
+    // Shouldn't try to use Blazor yet, it's just not supported yet and we'd have to get preview version of everytihng
+    // When we do try it, I want to use Blazor WebAssembly, NOT Blazor Server.
+    // And only for the Edit game page, so we can replace all the JS to score games with webasm
+
     [Parameter]
     public Game g { get; set; }
 
