--- a/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.TeamLastWeekData
+﻿@*@model BowlingCoreMVC.Models.TeamLastWeekData
 
 
 <div class="card text-white bg-secondary card-inline w-100">
@@ -24,7 +24,7 @@
                 {
                     @for (var i = 0; i <= Model.UserNames.Count - 1; i++)
                     {
-                        @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.*@
+                        @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.@
                         <tr class="text-black-50">
                             <td scope="col" class="text-sm-center">@Model.UserNames[i]</td>
                             <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Averages[i]</span></td>
@@ -57,7 +57,71 @@
     }
 </div>
 
-<br /><br />
+<br />
+<br />
+    *@
+
+
+@model BowlingCoreMVC.Models.TeamLastWeekData
+
+<div class="card text-white bg-secondary card-inline w-100">
+    <div class="card-body">
+        <h5 class="card-title">@Model.TeamName</h5>
+        <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
+
+        <table class="table table-sm table-bordered table-responsive-sm">
+            <thead class="thead-dark text-sm-center">
+                <tr>
+                    <th scope="col" class="text-center">User</th>
+                    <th scope="col">Average</th>
+                    <th scope="col">Total Pins</th>
+                    <th scope="col">Total Games</th>
+                    <th scope="col">Game 1</th>
+                    <th scope="col">Game 2</th>
+                    <th scope="col">Game 3</th>
+                    <th scope="col">Series</th>
+                </tr>
+            </thead>
+            <tbody class="table-light">
+                @if (Model.UserData.Count >= 1)
+                {
+                    @foreach (UserTeamWeekData userdata in Model.UserData)
+                    {
+                        @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.*@
+                        <tr class="text-black-50">
+                            <td scope="col" class="text-sm-center">@userdata.Username</td>
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.Average</span></td>
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.TotalPins</span></td>
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.TotalGames</span></td>
+                            @if (userdata.Series != null)
+                            {
+                                <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.Series.Games.Where(o => o.SeriesIndex == 1).Single().Score</span></td>
+                                <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.Series.Games.Where(o => o.SeriesIndex == 2).Single().Score</span></td>
+                                <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@userdata.Series.Games.Where(o => o.SeriesIndex == 3).Single().Score</span></td>
+                                <td scope="col" class="text-center"><span class="badge badge-info badge-pill">@userdata.Series.SeriesScore</span></td>
+                            }
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    </div>
+    @if (!Model.IsCurrentUserOnTeam)
+    {
+        <div class="card-footer">
+            <a asp-action="RequestToJoin" asp-controller="Leagues" class="btn btn-outline-light btn-secondary">Request to Join</a>
+        </div>
+    }
+    else
+    {
+        <div class="card-footer">
+            <a asp-action="RequestToLeave" asp-controller="Leagues" asp-route-id="@Model.TeamID" class="btn btn-outline-light btn-danger">Request to Leave</a>
+        </div>
+    }
+</div>
+
+<br />
+<br />
 
 
 
