--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -90,15 +90,53 @@
         <div id="@CollapseGameID" class="card" aria-labelledby="GameHeading">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-2">
                         <button class="btn btn-default btn-lg" onclick="PreviousClickSendGame(@Model.ID)">@*<span class="glyphicon glyphicon-arrow-left" />*@&lt;--</button>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-2">
                         <button class="btn btn-default btn-lg" onclick="MissedAllClick(@Model.ID)" id="@Model.ID-btnMissedAll" value="false">@*<span class="glyphicon glyphicon-adjust" />*@O</button>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-2">
                         <button class="btn btn-default btn-lg" onclick="NextClickSendGame(@Model.ID)">@*<span class="glyphicon glyphicon-arrow-right" />*@--&gt;</button>
                     </div>
+                    <div class="col-xs-2">
+                        <select class="form-control">                        
+                            <option>Ball 1</option>
+                            <option>Ball 2</option>
+                            <option>Ball 3</option>
+                        </select>
+                    </div>
+                    <div class="col-xs-4">
+@*
+                        <label>Mark:</label><input type="range" list="mark_options" id="MarkInput" oninput="MarkOutput.value = MarkInput.value" >                      
+                        <output id="MarkOutput"></output>
+
+                        <br />
+
+                        <label>Feet:</label><input type="range" list="feet_options" id="FeetInput" oninput="FeetOutput.value = FeetInput.value" />
+                        <output id="FeetOutput"></output>
+
+                        <datalist id="mark_options">
+                            <option value="0" label="0">0</option>
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="30" label="30">30</option>
+                            <option value="40">40</option>
+                            <option value="50">50</option>
+                            <option value="60" label="60">60</option>
+                        </datalist>
+                        <datalist id="feet_options">
+                            <option value="0">0</option>
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="30">30</option>
+                            <option value="40">40</option>
+                            <option value="50">50</option>
+                            <option value="60">60</option>
+                        </datalist>
+*@
+                    </div>
+
 @*
                     <div class="col-xs-2"></div>
                     <div class="col-xs-2">
