--- a/BowlingCoreMVC/Views/Shared/_CardListSingleValue.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_CardListSingleValue.cshtml
@@ -6,9 +6,18 @@
         <h5 class="card-title">@Model.Title</h5>
         <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
         <ul class="list-group w-100 border-primary list-group-flush">
+            @* TODO(ERIC): Consider changing li to button with list-group class (similar to game index) *@
             @for (var i = 0; i <= Model.Keys.Count - 1; i++)
             {
-                <li class="list-group-item text-black-50">@Model.Keys[i]<span class="badge badge-primary badge-pill float-right">@Model.Values[i]</span></li>
+                if (Model.Links[i] == null || string.IsNullOrEmpty(Model.Links[i]))
+                {
+                    <li class="">@Model.Keys[i]<span class="badge badge-primary badge-pill float-right">@Model.Values[i]</span></li>
+                }
+                else
+                {
+                    <li class="list-group-item text-black-50"><a href="@Model.Links[i]">@Model.Keys[i]<span class="badge badge-primary badge-pill float-right">@Model.Values[i]</span></a></li>
+                }
+
             }
 
         </ul>
